# document-intelegence-refinery

./: .env.example  .gitignore  DOMAIN_NOTES.md  README.md  pyproject.toml
.refinery/logs/: extraction_ledger.jsonl
.refinery/pageindex/: 2022_Audited_Financial_Statement_Report.json  Annual_Report_JUNE-2018.json  Annual_Report_JUNE-2023.json  Audit Report - 2023.json  CBE Annual Report 2006-7 .json  CBE Annual Report 2016-17.json  Company_Profile_2024_25.json  Consumer Price Index April 2025.json  EthSwitch-10th-Annual-Report-202324.json  Security_Vulnerability_Disclosure_Standard_Procedure_2.json  fta_performance_survey_final_report_2022.json  tax_expenditure_ethiopia_2021_22.json  test-table.json
.refinery/profiles/: 2018_Audited_Financial_Statement_Report.json  20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF.json  2022_Audited_Financial_Statement_Report.json  Annual_Report_JUNE-2017.json  Annual_Report_JUNE-2018.json  Annual_Report_JUNE-2023.json  Audit Report - 2023.json  CBE Annual Report 2006-7 .json  CBE Annual Report 2016-17.json  CBE Annual Report 2017-18.json  Company_Profile_2024_25.json  Consumer Price Index August 2025.json  ETHIO_RE_AT_A_GLANCE_2023_24.json  ETHSWITCH-Annual-Report-202122.json  EthSwitch-10th-Annual-Report-202324.json  fta_performance_survey_final_report_2022.json  tax_expenditure_ethiopia_2021_22.json  test-table.json
rubric/: extraction_rules.yaml
scripts/: docline.py  example_qa.py  inspect_stores.py  mineru.py  pdfplumber_analysis.py  run_all_extractors.py  serve.py  verify_table_extraction.py
src/: __init__.py
src/adapters/: __init__.py  docling_adapter.py
src/agents/: __init__.py  audit.py  chunker.py  domain_hint.py  extractor.py  fact_extractor.py  indexer.py  query_agent.py  triage.py
src/api/: app.py  serve.py
src/extractors/: __init__.py  base.py  fast.py  layout.py  vision.py  vision_client.py
src/models/: __init__.py  schema.py
src/pipelines/: __init__.py  run_pipeline.py
src/utils/: llm.py  (+6 more)
tests/: conftest.py  test_extractors.py  test_router.py  test_triage.py
(+5 files in other folders)
