[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-intle-refinery"
version = "0.1.0"
description = "Document Intelligence Refinery — adaptive extraction pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
    "langdetect>=1.0.9",
    "fast-langdetect>=1.0.0",
    "docling>=2.76.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
compare = ["docling>=2.0"]
mineru = ["mineru>=0.3.0"]

[project.scripts]
refinery = "src.pipelines.run_pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
