[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-intle-refinery"
version = "0.1.0"
description = "Document Intelligence Refinery — adaptive extraction pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
    "langdetect>=1.0.9",
    "fast-langdetect>=1.0.0",
    "docling>=2.76.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "chromadb>=0.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
compare = ["docling>=2.0"]
mineru = ["mineru>=0.3.0"]
rag = []

[project.scripts]
refinery = "src.pipelines.run_pipeline:main"
refinery-serve = "src.api.serve:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
